<resources>
    <string name="app_name">My Application2</string>
    <string name="filtre">Filtre</string>
    <string name="apply_filter">Applique le filtre</string>
    <string name="add_filter">Ajout de filtre</string>
    <string name="check">Cochez ce que vous voulez afficher dans la recherche</string>
    <string name="friend">Amis</string>

    <string name="name">Name</string>
    <string name="description">description</string>
    <string name="commentlist">Commentaire :</string>
    <string name="clic_to_show">Cliquer pour afficher</string>
    <string name="feed">Feed</string>
    <string name="write_your_post">Écrire votre message</string>
    <string name="send">Envoyer</string>
    <string name="type_to_search">Tapez ce que vous cherchez&#8230;</string>
    <string name="search">Recherche</string>
    <string name="friend_request">Demande d\'ami</string>
    <string name="profile">Profil</string>
    <string name="contact_list">Liste de contacts : </string>
    <string name="interests">Intérêts : </string>
    <string name="cours">Cours</string>
    <string name="about">À propos de moi</string>
    <string name="send_dm">Envoyer un message privé</string>


    <string name="message1">Bonjour</string>
    <string name="message2">Bonjour</string>
    <string name="message3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ornare ac nisi at vehicula. Duis posuere eros a libero consectetur laoreet vitae aliquam tellus. Duis ut malesuada elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ornare ac nisi at vehicula. Duis posuere eros a libero consectetur laoreet vitae aliquam tellus. Duis ut malesuada elit.</string>
    <string name="message4">Nulla facilisi. Ut placerat augue lacus, sit amet vulputate justo elementum ut. </string>
    <string name="envoyer">Envoyer</string>
    <string name="profile_name">Henri</string>
    <string name="profile_btn1">Information personelles</string>
    <string name="profile_btn2">Notifications</string>
    <string name="profile_btn3">Liste de contacts</string>
    <string name="profile_btn4">Favoris</string>


    <string name="email">Email</string>
    <string name="mdp">Mot de passe</string>
    <string name="Connexion">Connexion</string>
    <string name="exempleemail">prenom.nom@udem.ca</string>
    <string name="Succes">Succès!</string>
    <string name="Echec">Mot de passe incorrect</string>
    <string name="NoExist">Pas d\'usager associé au email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Inscription">Inscription</string>
    <string name="mdp_confirmer">Confirmer le mot de passe</string>
    <string name="Voscours">Vos cours</string>
    <string name="VosInterets">Vos intérêts</string>
    <string name="Suivant">Suivant</string>
    <string name="pass_must_identical">Les 2 mots de passe doivent être identiques</string>
<<<<<<< HEAD
    <string name="not_valid_email">Format demail invalide</string>
    <string name="notification1">1 notification</string>
    <string name="Notifications">Notifications</string>
    <string name="accepter">Accepter</string>
    <string name="Tom">Tom</string>
    <string name="ignorer">Ignorer</string>
=======
    <string name="not_valid_email">Format d\'email invalide</string>
    <string name="mettreajourIP">Mettre à jour</string>
    <string name="textInfoPerso">Information Personnel</string>
    <string name="Contacts">Contacts</string>
    <string name="contacts32">32 contacts</string>
    <string name="contact1">1 contact</string>
    >>>>>>> master

</resources>