<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile" />
            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="28dp"
                android:background="#E6E6E6"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/daco_4219973" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/circle" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/message_background"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/message1" />

            </LinearLayout>

            <View
                android:layout_width="25dp"
                android:layout_height="1dp"
                android:background="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/message_background_user"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/message2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_height="match_parent">
                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/circle" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/message_background"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/message3" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="10"
                android:background="@color/white" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="10"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/message_background_user"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/message4" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/messager_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/envoyer" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>