<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightgray"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/motdepasseInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="231dp"
        android:layout_marginRight="231dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:text="@string/mdp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/motdepasseInscription2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <EditText
        android:id="@+id/motdepasseInscription2"
        android:layout_width="221dp"
        android:layout_height="29dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/edittextborder"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/motdepasse_confirmer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motdepasseInscription" />

    <EditText
        android:id="@+id/motdepasse_confirmer2"
        android:layout_width="221dp"
        android:layout_height="29dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/edittextborder"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/conifrmerInscription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motdepasse_confirmer" />

    <Button
        android:id="@+id/conifrmerInscription"
        android:layout_width="243dp"
        android:layout_height="56dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="53dp"
        android:backgroundTint="@color/blue"
        android:text="@string/Inscription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motdepasse_confirmer2" />

    <TextView
        android:id="@+id/inscription"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="71dp"
        android:layout_marginRight="71dp"
        android:layout_marginBottom="7dp"
        android:gravity="center"
        android:text="@string/Inscription"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/udemLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/motdepasse_confirmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="151dp"
        android:layout_marginRight="151dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:text="@string/mdp_confirmer"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/motdepasse_confirmer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motdepasseInscription2" />

    <ImageView
        android:id="@+id/udemLogo"
        android:layout_width="110dp"
        android:layout_height="102dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="151dp"
        android:layout_marginRight="151dp"
        android:layout_marginBottom="155dp"
        app:layout_constraintBottom_toTopOf="@+id/email_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscription"
        app:srcCompat="@drawable/udem" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="229dp"
        android:layout_height="37dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/edittextborder"
        android:ems="10"
        android:hint="@string/exempleemail"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/motdepasseInscription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/email"
        android:layout_width="59dp"
        android:layout_height="30dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="223dp"
        android:layout_marginEnd="262dp"
        android:layout_marginRight="262dp"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/email_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscription" />

    <TextView
        android:id="@+id/message_inscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginLeft="173dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="180dp"
        android:layout_marginRight="180dp"
        android:layout_marginBottom="84dp"
        android:textColor="@color/black"
        android:visibility="invisible"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/email_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/udemLogo" />
</androidx.constraintlayout.widget.ConstraintLayout>