<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/filtre"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnUdem"
            tools:text="filtre" />

        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:background="#E6E6E6"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/_3f948216ff912389efec6bc9ffe761c" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:background="#E6E6E6"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/daco_4219973" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/btnUdem"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/_8fb410b7f050340f2409302d88d6baa_jpeg" />

        <ImageButton
            android:id="@+id/btnMyProfil"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMenu"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/check"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="cocher" />

        <Button
            android:id="@+id/btnApplyFilter"
            android:layout_width="0dp"
            android:layout_height="50sp"

            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#2D9BF0"
            android:padding="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/apply_filter"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            app:cornerRadius="3sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/apply_filter" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>